entry validation fixed

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </div>
                 <div class="col-md-4">
                     <form class="formCartoon">
+                        <h5 id ="error"></h5>
                         <label for="addNewButton">Add a new Cartoon: </label>
                         <input type="text" id="input">
                         <br>
